# pdf_slurp

./: LICENSE  README.md  pdf_slurp.py  pyproject.toml
